# hellospeak-be

./: .env.example  .pre-commit-config.yaml  Procfile  README.md  pyproject.toml  requirements.txt
docker/: dev.Dockerfile  dev.docker-compose.yaml  docker-compose.yaml
src/: main.py  manage.py
src/app/: __init__.py
src/app/apis/: auth.py  chat.py  conversation.py  routes.py  user.py
src/app/common/auth/: authenticator.py  user.py
src/app/common/exception/: auth.py  user.py
src/app/common/websocket/: room_manager.py  signal_manager.py
src/app/config/: configs.py  settings.py
src/app/crud/: conversation.py  user.py
src/app/depends/: user.py
src/app/migrations/: 0001_initial.py  0002_user_full_name_user_username.py  0003_conversation.py  0004_alter_conversation_table.py  0005_alter_user_username.py  0006_conversation_level_conversation_topic_and_more.py  0007_alter_conversation_topic.py
src/app/models/: __init__.py  car.py  conversation.py  user.py
src/app/schemas/: conversation.py  user.py
src/app/setup/: middlewares.py
