[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]

[tool.poetry]
authors = ["Your Name <you@example.com>"]
description = ""
name = "hellospeak-be"
readme = "README.md"
version = "0.1.0"

[tool.poetry.dependencies]
bcrypt = "4.0.1"
django = "^5.0.3"
fastapi = "^0.110.0"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
psycopg = "^3.1.18"
pydantic = "^2.6.4"
pydantic-settings = "^2.2.1"
python = "^3.10"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
uuid = "^1.30"
uvicorn = "^0.29.0"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.7.0"
ruff = "^0.3.4"
toml-sort = "^0.23.1"

[tool.ruff]
exclude = [
  ".bzr",
  ".direnv",
  ".eggs",
  ".git",
  ".git-rewrite",
  ".hg",
  ".ipynb_checkpoints",
  ".mypy_cache",
  ".nox",
  ".pants.d",
  ".pyenv",
  ".pytest_cache",
  ".pytype",
  ".ruff_cache",
  ".svn",
  ".tox",
  ".venv",
  ".vscode",
  "__pypackages__",
  "_build",
  "buck-out",
  "build",
  "dist",
  "node_modules",
  "site-packages",
  "venv"
]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
ignore = ["E203", "ISC003"]
